# unicats

./: .gitignore  README.md  pyproject.toml
scripts/: path.sh  run.sh
unicats/: train.py
unicats/config/: config.yaml
unicats/data/: dataset.py  utils.py
unicats/datasets/: scp_dataset.py
unicats/layers/: residual_stack.py  upsample.py
unicats/models/: ctx_v2w.py  hifigan.py  melgan.py
unicats/models/conformer/: decoder.py  decoder_layer.py  nets_utils.py  subsampling.py
unicats/scripts/: libritts_convert_sample_rate.py  libritts_dataset_config_split.py  libritts_test_set_split.py
unicats/test/data/: test_utils.py
