[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "unicats"
version = "0.1.0"
dependencies = [
    "numpy~=1.20.3",
    "h5py~=3.2.1",
    "kaldiio~=2.18.0",
    "librosa~=0.9.2",
    "matplotlib~=3.4.3",
    "nltk==3.8.1",
    "setuptools==65.6.3",
    "six==1.16.0", 
    "soundfile~=0.10.3.post1",
    "torch~=1.12.1",
    "tqdm~=4.62.3",
    "resemblyzer",
    "pathlib~=1.0.1",
    "pyyaml~=6.0",
    "tensorboardx~=2.5.1",
    "scikit-learn~=0.24.2",
    "filelock~=3.12.2",
    "scipy~=1.7.1",
]

[tool.setuptools.packages]
find = {}

[project.optional-dependencies]
dev = [
    "pytest==7.4.2",
]